--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,8 +1,7 @@
-.colorFooter{
- color: rgb(15, 154, 103);
+footer {
+   position: absolute;
+   bottom: 0;
+   width: 100%;
+   height: 100px;
+   line-height: 100px;
 }
-
-html{
- overflow-y:auto;
-
-    }
